fix ui p2p updates

--- a/app/src/main/res/layout/peers_send_kin_layout.xml
+++ b/app/src/main/res/layout/peers_send_kin_layout.xml
@@ -65,7 +65,8 @@
             android:id="@+id/kin_coin"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="19dp"
+            android:layout_marginEnd="4dp"
             android:baselineAlignBottom="@+id/amount"
             app:layout_constraintBottom_toBottomOf="@+id/amount"
             app:layout_constraintEnd_toStartOf="@+id/amount"
@@ -88,7 +89,7 @@
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="3dp"
             android:layout_marginStart="30dp"
             android:fontFamily="sans-serif"
             android:text="@{model.name}"
