--- a/app/src/main/res/layout/pre_earn_tab.xml
+++ b/app/src/main/res/layout/pre_earn_tab.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -31,49 +30,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/balance_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:fontFamily="sans-serif"
-            android:gravity="center_vertical|start"
-            android:paddingLeft="30dp"
-            android:text="@{model.balance}"
-            android:textColor="@color/balance_text_color"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/balance"
-            app:layout_constraintTop_toTopOf="@id/balance"
-            tools:text="200" />
-
-        <TextView
-            android:id="@+id/kin_currency"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:fontFamily="sans-serif"
-            android:gravity="center|start"
-            android:paddingLeft="7dp"
-            android:text="KIN"
-            android:textColor="@color/balance_text_color"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/balance_text"
-            app:layout_constraintStart_toEndOf="@+id/balance_text"
-            app:layout_constraintTop_toTopOf="@+id/balance_text"
-            tools:text="KIN" />
-
-        <ImageView
-            android:id="@+id/kin_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:scaleType="center"
-            app:layout_constraintBottom_toBottomOf="@+id/kin_currency"
-            app:layout_constraintStart_toEndOf="@+id/kin_currency"
-            app:layout_constraintTop_toTopOf="@+id/kin_currency"
-            app:srcCompat="@drawable/k_letter" />
-
 
         <android.support.constraint.Guideline
             android:id="@+id/mid_horizontal_guide_line"
@@ -81,13 +37,6 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="352dp" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/center_guide_line"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guid_right_inside"
