--- a/app/src/main/res/layout/questionnaire_reward_fragment.xml
+++ b/app/src/main/res/layout/questionnaire_reward_fragment.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="model"
-            type="org.kinecosystem.kinit.viewmodel.earn.QuestionnaireRewardViewModel"/>
+            type="org.kinecosystem.kinit.viewmodel.earn.TaskRewardViewModel"/>
     </data>
     <org.kinecosystem.kinit.view.customView.TransactionLayoutView
         android:layout_width="match_parent"
