--- a/app/src/main/res/layout/answer_image_selected_view.xml
+++ b/app/src/main/res/layout/answer_image_selected_view.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="😍"
+        android:textColor="#7884a5"
         android:textSize="@dimen/emoji_normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
